settings-in-desktop

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,8 +25,8 @@ scipy==1.15.2
 # ============================================================
 
 # Deep Learning (선택사항)
-# tensorflow==2.15.0
-# keras==2.15.0
+tensorflow==2.15.0
+keras==2.15.0
 
 # ============================================================
 # 개발/실험 도구
