feat : add imbalanced-learn library in requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,9 @@ scikit-learn==1.7.2
 # Statistics
 scipy==1.15.2
 
+# 불균형 데이터 처리
+imbalanced-learn>=0.11.0
+
 # ============================================================
 # 고급 기능 (Advanced - 프로젝트 필요시)
 # ============================================================
