--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,92 @@
-# Data Science 2-Year Experience Level
-# Python 3.10 | conda-forge
-# Last Updated: 2025-11-29
-
 # ============================================================
-# 필수 라이브러리 (Core)
+# AICE 자격증 대비 풀스택 requirements.txt
+# Python 3.10 권장
 # ============================================================
 
-# 데이터 처리 & 분석
-pandas>=2.0.0
-numpy==1.24.3
+# ------------------------------------------------------------
+# 기본 데이터 처리 & 분석
+# ------------------------------------------------------------
+numpy==1.25.2
+pandas==2.1.4
+scipy==1.11.4
+pyarrow>=14.0.0
 
+# ------------------------------------------------------------
 # 시각화
+# ------------------------------------------------------------
 matplotlib>=3.7.0
 seaborn>=0.12.0
+plotly>=5.18.0
+missingno>=0.5.2      # 결측치 패턴 시각화 (시험에서 자주 나옴)
 
-# 머신러닝 (버전 호환성 필수)
+# ------------------------------------------------------------
+# 머신러닝 (AICE 필수)
+# ------------------------------------------------------------
 scikit-learn==1.3.2
-scipy>=1.11.0
-
-# 불균형 데이터 처리 (SMOTE)
+xgboost==1.7.6
+lightgbm==4.1.0
+catboost==1.2.2
 imbalanced-learn==0.11.0
 
-# Jupyter 환경
-jupyter>=1.0.0
-jupyterlab>=4.0.0
+# ------------------------------------------------------------
+# 모델 평가 & 실험 관리
+# ------------------------------------------------------------
+optuna>=3.3.0          # 하이퍼파라미터 튜닝
+scikit-optimize>=0.9.0 # 시험에서 Bayesian Optimization 문제 나올 때 사용됨
+
+# ------------------------------------------------------------
+# 전처리 도구 (시험 빈출)
+# ------------------------------------------------------------
+category_encoders>=2.6.0
+feature-engine>=1.6.2
+mlxtend>=0.23.0         # Stacking/Ensemble 비교 실험 유용
+
+# ------------------------------------------------------------
+# 딥러닝 (필수는 아니지만 선택)
+# ------------------------------------------------------------
+tensorflow==2.15.0
+keras==2.15.0
+torch>=2.2.0
+torchvision>=0.17.0
+
+# ------------------------------------------------------------
+# 자연어 처리 (AICE-Pro 대비)
+# ------------------------------------------------------------
+nltk>=3.8.1
+spacy>=3.7.0
+transformers>=4.38.0
+sentencepiece>=0.1.99
+
+# ------------------------------------------------------------
+# Jupyter Notebook 환경
+# ------------------------------------------------------------
+jupyter==1.1.1
+jupyterlab==4.5.0
+ipykernel>=6.29.0
+notebook>=7.1.0
+
+# ------------------------------------------------------------
+# 개발 도구
+# ------------------------------------------------------------
+pip>=25.0
+python-dotenv>=1.0.0
+tqdm>=4.66.0
+joblib>=1.4.0       # 병렬 처리 / 모델 저장 필수
+
+# ------------------------------------------------------------
+# 데이터 핸들링
+# ------------------------------------------------------------
+openpyxl>=3.1.0     # Excel 파일 처리
+xlrd>=2.0.1         # XLS reader
+pydantic>=2.0.0     # 설정/구성 관리 시 유용
 
 # ============================================================
-# 설치 방법
-# ============================================================
-# pip install -r requirements.txt
-#
+# 주의사항
+# ------------------------------------------------------------
+# - AICE는 Pandas, Sklearn, XGBoost, LightGBM 등이 매우 자주 등장.
+# - Optuna / scikit-optimize는 튜닝 문제에서 강력.
+# - catboost는 범주형 변수 자동 처리 시험 대비에 중요.
+# - missingno는 결측치 분석 문제에서 점수 차이 남.
+# - numpy 1.26+는 TensorFlow가 깨지므로 1.25.x 고정.
+# - torch는 GPU 있으면 설치 권장 (없으면 CPU도 OK)
 # ============================================================
