feat | test1 clear

--- a/requirements.txt
+++ b/requirements.txt
@@ -46,8 +46,10 @@ mlxtend>=0.23.0         # Stacking/Ensemble 비교 실험 유용
 # ------------------------------------------------------------
 tensorflow==2.15.0
 keras==2.15.0
+# PyTorch 공식 권장 패키지 (Mac ARM/conda/pip 모두 호환)
 torch>=2.2.0
 torchvision>=0.17.0
+torchaudio>=2.2.0
 
 # ------------------------------------------------------------
 # 자연어 처리 (AICE-Pro 대비)
