--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,18 @@
 {
     "editor.quickSuggestions": {
-        "other": false,
+        "other": true,
         "comments": false,
         "strings": false
     },
+    "editor.suggest.showFunctions": true,
+    "editor.suggest.showVariables": true,
+    "editor.suggest.showMethods": true,
+    "editor.suggest.showKeywords": true,
+    "editor.suggest.showSnippets": true,
+    "editor.suggest.showWords": true,
     "editor.suggestOnTriggerCharacters": false,
     "editor.inlineSuggest.enabled": false,
     "editor.wordBasedSuggestions": "off",
     "editor.parameterHints.enabled": false,
-    "editor.suggest.showKeywords": false,
-    "editor.suggest.showSnippets": false,
-    "editor.suggest.showWords": false,
     "python.analysis.completeFunctionParens": false
 }
